Fixed spacing of contact section on home page

--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ a:hover, a:visited, a:link, a:active {
   background-color: white;
 }
 .contact {
-  height: 50vh;
+  height: 60vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
